# TwitterClient

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: main.cpp  wc.cpp
include/: json.h
include/twitter/: base64.h  client.h  constants.h
sources/: base64.cpp  client.cpp
tests/: catch.h  check.cpp  main.cpp  threads.cpp
